--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "pg": "^8.10.0",
     "tsc": "^2.0.4",
     "uuid": "^9.0.0"
   },
@@ -15,7 +16,9 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^18.16.1",
+    "@types/pg": "^8.6.6",
     "@types/uuid": "^9.0.1",
+    "dotenv": "^16.0.3",
     "tsc-watch": "^6.0.0"
   },
   "repository": {
