--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
     "pg": "^8.10.0",
     "tsc": "^2.0.4",
+    "typescript": "^5.0.4",
     "uuid": "^9.0.0"
   },
   "name": "jwt-refresh-token-nodejs-postgres",
