--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dev": "tsc-watch --onSuccess \"node ./build/app.js\""
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
@@ -17,6 +18,7 @@
   "version": "1.0.0",
   "main": "src/app.ts",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.16.1",
